# rengine

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  WARP.md  bevy-0.16-to-0.17.md  bevy-0.17-to-0.18.md  biome.json  biome.jsonc  components.json  index.html  package.json  rengine.json  rust-toolchain.toml  todo.md  tsconfig.json  vite.config.ts  vitest.config.ts
adapters/python/app-cli/: .gitignore  README.md  __init__.py  cli.py  conversion_log.txt  pyproject.toml  run_cli.py
adapters/python/app-cli/rengine_cli/: __init__.py  base.py  cli.py  commands.py  factory.py  handlers.py  parser.py
adapters/python/app-cli/rengine_cli/common/: DFF.py  map.py  native_ps2.py  native_xbox.py  rw_versions.py  txd.py
adapters/python/app-cli/rengine_cli/modules/: __init__.py  dff_to_obj.py  ide_parser.py  ipl_to_godot.py  ipl_to_godot_assets.py  txd_to_materials.py
adapters/python/app-cli/tests/: __init__.py  test_base.py  test_cli.py  test_parser_factory.py
adapters/python/app-qt/: .gitignore  CODING_GUIDELINES.md  LINUX_SETUP.md  README.md  build.py  diagnose_system.sh  pyproject.toml  requirements.txt  run_app.sh  run_app_auto.sh  run_app_wayland.sh  test_startup.sh  verify_build.py
adapters/python/app-qt/.github/workflows/: main.yml
adapters/python/app-qt/application/: __init__.py  content_area.py  debug_system.py  file_explorer.py  main.py  main_application.py  responsive_utils.py  status_bar.py  styles.py  tools_panel.py
adapters/python/app-qt/application/common/: DFF.py  __init__.py  col.py  message_box.py  native_gc.py  native_psp.py  native_wdgl.py  rw_versions.py  versionsets.json
adapters/python/app-qt/application/tools/: __init__.py  tool_registry.py
adapters/python/app-qt/application/tools/COL_Editor/: COL_Editor.py
adapters/python/app-qt/application/tools/DFF_Viewer/: DFF_Viewer.py
adapters/python/app-qt/application/tools/DFF_to_OBJ_Converter/: DFF_to_OBJ_Converter.py  __init__.py
adapters/python/app-qt/application/tools/IDE_Editor/: IDE_Editor.py  IDE_core.py
adapters/python/app-qt/application/tools/IMG_Editor/: IMG_Editor.py  __init__.py  archive_tab.py  context_menu.py  drag_drop_handler.py  img_controller.py  img_editor_tool.py  img_integrations.py  progress_dialog.py  ui_components.py  ui_interaction_handlers.py
adapters/python/app-qt/application/tools/Map_Editor/: Map_Editor.py
adapters/python/app-qt/application/tools/RW_Analyze/: RW_Analyze.py
adapters/python/app-qt/application/tools/TXD_Editor/: TXD_Editor.py  __init__.py
adapters/python/app-qt/rengine_qt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
adapters/python/app-qt/tests/: __init__.py  test_app_structure.py  test_common_modules.py  test_tools.py
adapters/rust-cli/: Cargo.toml  README.md  justfile  package.json
adapters/rust-cli/src/: commands.rs  converters.rs  handlers.rs  integration_tests.rs  main.rs
adapters/rust-cli/src/converters/: dff_to_obj.rs  ipl_to_godot.rs  txd_to_materials.rs
adapters/rust-cli/src/handlers/: batch.rs  col.rs  dff.rs  img.rs  ipl.rs  rw.rs  txd.rs
crates/bevy/bevy_mesh_outline/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/bevy/bevy_mesh_outline/.github/workflows/: test.yml
crates/bevy/bevy_mesh_outline/examples/: intersecting.rs
crates/bevy/bevy_mesh_outline/src/: flood.rs  lib.rs  mask.rs  node.rs  render.rs  texture.rs
crates/bevy/bevy_mesh_outline/src/shaders/: compose_output.wgsl  flood.wgsl  mask.wgsl
crates/bevy/rerecast/: Cargo.toml  readme.md
crates/bevy/rerecast/.github/workflows/: ci.yml
crates/bevy/rerecast/assets/maps/: scene.map
crates/bevy/rerecast/assets/test/chainboom/: contour_set.json  poly_mesh.json
crates/bevy/rerecast/assets/test/dungeon/: compact_heightfield_contours.json  compact_heightfield_initial.json  config.json  contour_set.json  heightfield_filtered.json  heightfield_initial.json  poly_mesh.json  poly_mesh_detail.json
crates/bevy/rerecast/crates/bevy_rerecast/: Cargo.toml
crates/bevy/rerecast/crates/bevy_rerecast_core/: Cargo.toml
crates/bevy/rerecast/crates/bevy_rerecast_editor/: Cargo.toml
crates/bevy/rerecast/crates/rerecast/: Cargo.toml
crates/bevy/rerecast/crates/rerecast/src/: config.rs  (+9 more)
crates/bevy/rerecast/examples/examples/: trenchbroom.rs
crates/bevy/spirit_edit_core/: Cargo.toml  todo.md
crates/bevy/spirit_edit_core/src/: utils.rs
crates/bevy/spirit_edit_core/src/doodads/: mod.rs  rotate.rs
crates/bevy/spirit_edit_core/src/placement/: mod.rs
crates/bevy/spirit_edit_core/src/prefabs/: mod.rs  prefab_definitions.rs  prefab_file.rs
crates/bevy/spirit_edit_core/src/zones/: mod.rs
crates/bevy/transform-gizmo/: Cargo.toml
crates/bevy/transform-gizmo/crates/transform-gizmo/: Cargo.toml
crates/bevy_material_wizard/: Cargo.toml
crates/bevy_material_wizard/assets/material_replacements/: tree1.matrep.ron
crates/bevy_material_wizard/src/: gltf_models.rs  material_overrides.rs  material_replacements.rs  material_replacements_map.rs
crates/bevy_material_wizard/src/advanced_materials/shaders/: foliage.wgsl
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/renderware/: col.rs  dff.rs  ipl.rs  mod.rs  txd.rs  versions.rs
crates/rerecast/crates/avian_rerecast/: Cargo.toml
crates/rerecast/crates/avian_rerecast/src/: collider_to_trimesh.rs  lib.rs
crates/rerecast/crates/bevy_rerecast_editor_integration/: Cargo.toml
crates/rerecast/crates/bevy_rerecast_editor_integration/src/: brp.rs
crates/rerecast/crates/test_utils/: Cargo.toml
crates/rerecast/crates/test_utils/src/: lib.rs
crates/rerecast/examples/: Cargo.toml
crates/rerecast/examples/examples/: filtering.rs  from_avian_collider.rs  from_gltf.rs
crates/transform-gizmo/crates/transform-gizmo-bevy/: Cargo.toml
crates/transform-gizmo/crates/transform-gizmo-bevy/src/: lib.rs
tauri-r3f/src-tauri/: Cargo.toml
tauri-r3f/src-tauri/assets/: versionsets.json
tauri-r3f/src-tauri/examples/: lampposts.ipl  scene_objects.pwn  test_scene.pwn
tauri-r3f/src-tauri/src/: lib.rs
tauri-r3f/src-tauri/src/renderware/: col.rs  img.rs  versions.rs
(+736 files in other folders)
