[package]
name = "spirit_editor"
version = "0.16.0"
edition = "2024"
default-run = "main"


[dependencies]


bevy = { version = "0.18.0", features = [
  "jpeg",
  "tga",
  "png",
  "serialize",
  "ktx2",
] }


iyes_perf_ui = { path = "crates/iyes_perf_ui" }


bevy_egui = "0.39.0"


winit = { version = "0.30", default-features = false }

# is this necessary !? 
# image = { version = "0.25.2", default-features = false }


avian3d = { version = "0.5", features = ["serialize"] }

bevy_rerecast = { path = "crates/rerecast/crates/bevy_rerecast" }
avian_rerecast = { path = "crates/rerecast/crates/avian_rerecast" }


degen_toon_terrain = { path = "crates/degen_toon_terrain", features = [
  "physics",
] }
#degen_toon_terrain =  {path="../degen_toon_terrain", features=["physics"]}


bevy_material_wizard = { path = "crates/bevy_material_wizard" }
# bevy_material_wizard = {path="../bevy_material_wizard"}

bevy_materialize = "0.9.0"


bevy_magic_fx = { path = "crates/bevy_magic_fx" }
# bevy_magic_fx = {path="../bevy_magic_fx"}


degen_toon_water = { path = "crates/degen_toon_water" }
#degen_toon_water =  {path="../degen_toon_water"}


degen_toon_clouds = { path = "crates/degen_toon_clouds" }


bevy_regions = { path = "crates/bevy_regions" }


bevy_clay_tiles = { path = "crates/bevy_clay_tiles" }
# bevy_clay_tiles =  {path="../bevy_clay_tiles"}


noise = "0.9"


# vendored into new bevy ! 
# bevy_mod_picking = {version="0.20.0", features=["backend_raycast",  "highlight","selection"]}
# bevy_mod_raycast = "0.18.0"


bevy_common_assets = { version = "0.15.0", features = ["ron"] }


serde = { version = "1", features = ["derive"] }
ron = "0.8.1"
rand = "0.8"
bincode = "1.3.3"

spirit_edit_core.workspace = true


bevy_editor_pls.workspace = true
bevy_editor_pls_core.workspace = true
bevy_editor_pls_default_windows = { workspace = true }

#i want to dclare it like this but it errors 
bevy_obj = { path = "crates/bevy_obj", default-features = false, features = [
  "mesh",
] }
#bevy_obj=  {git="https://github.com/ethereumdegen/bevy_obj" ,  default-features = false , features= ["mesh"] }   

anyhow = "1"
#bevy_mod_sysfail = "7.0.0"
bevy-inspector-egui = "0.36.0"
bevy_asset_loader = "0.25.0"


bevy_foliage_tool = { path = "crates/bevy_foliage_tool" }
# bevy_foliage_tool =   {path = "../bevy_foliage_tool"}

bevy_mesh_outline = { path = "crates/bevy_mesh_outline" }

# bevy_toon_shader =  { git = "https://github.com/tbillington/bevy_toon_shader"}


#bevy_contact_projective_decals = {git= "https://github.com/ethereumdegen/bevy_contact_projective_decals"}

serde_json = "1.0.138"


[workspace.package]
version = "0.8.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "In-App editor tools for bevy apps"
readme = "README.md"


[workspace]
members = ["crates/*"]
exclude = ["crates/rerecast", "crates/transform-gizmo", "tauri-r3f/src-tauri"]
resolver = "2"


[workspace.dependencies]
bevy_editor_pls = { version = "0.8.2", path = "crates/bevy_editor_pls" }
bevy_editor_pls_core = { version = "0.8.2", path = "crates/bevy_editor_pls_core" }
bevy_editor_pls_default_windows = { version = "0.8.2", path = "crates/bevy_editor_pls_default_windows" }

spirit_edit_core = { path = "crates/spirit_edit_core" }
#spirit_edit_core = {path="../spirit_edit_core"}

anyhow = "1"
bevy-inspector-egui = "0.36.0"


egui = "0.31"

egui_dock = "0.16" # ?? 
# egui-gizmo = "0.16"  # deprecated ? 

transform-gizmo-bevy = { path = "crates/transform-gizmo/crates/transform-gizmo-bevy" }
#transform-gizmo-bevy= {git= "https://github.com/ethereumdegen/transform-gizmo", branch="main"}
# transform-gizmo-bevy= {path = "../transform-gizmo/crates/transform-gizmo-bevy"}


[profile.dev.package."*"]
opt-level = 3


[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "upgrade_zone_files"
path = "scripts/upgrade_zone_files.rs"

[[bin]]
name = "translate_zone_entities"
path = "scripts/translate_zone_entities.rs"
