[package]
name = "rengine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core shared functionality for Rengine across different backends"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
byteorder = "1.4"
thiserror = "1.0"