[package]
name = "rerecast-workspace"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = ["crates/*", "examples"]
resolver = "3"
exclude = ["./assets/"]

[workspace.package]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/janhohenheim/rerecast"
keywords = ["bevy", "recast", "navmesh", "navigation", "ai"]
categories = ["game-development"]
readme = "readme.md"

[workspace.dependencies]
avian3d = { version = "0.5", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }
slotmap = { version = "1.0.7", default-features = false }
ehttp = { version = "0.5", default-features = false }
rfd = "0.15"

# In sync with Bevy
thiserror = { version = "2.0.12", default-features = false }
wgpu-types = { version = "28.0.0", default-features = false }
base64 = { version = "0.22.0", default-features = false, features = ["alloc"] }
glam = { version = "0.30.5", default-features = false }
libm = { version = "0.2.0", default-features = false }
cosmic-text = { version = "0.14.2", default-features = false }
tracing = { version = "0.1.41", default-features = false }
critical-section = { version = "1.2.0", default-features = false }
anyhow = { version = "1.0.98", default-features = false }

# Bevy
## Bevy itself is only used in tests and examples, so we can use the default features.
bevy = { version = "0.18.0", default-features = true }
## Actual crate code should only depend on bevy_ crates with default features disabled.
bevy_reflect = { version = "0.18.0", default-features = false, features = [
    "glam",
] }
bevy_app = { version = "0.18.0", default-features = false }
bevy_camera = { version = "0.18.0", default-features = false }
bevy_utils = { version = "0.18.0", default-features = false }
bevy_light = { version = "0.18.0", default-features = false }
bevy_remote = { version = "0.18.0", default-features = false }
bevy_mesh = { version = "0.18.0", default-features = false }
bevy_ecs = { version = "0.18.0", default-features = false }
bevy_render = { version = "0.18.0", default-features = false }
bevy_transform = { version = "0.18.0", default-features = false }
bevy_asset = { version = "0.18.0", default-features = false }
bevy_image = { version = "0.18.0", default-features = false }
bevy_pbr = { version = "0.18.0", default-features = false }
bevy_math = { version = "0.18.0", default-features = false }
bevy_color = { version = "0.18.0", default-features = false }
bevy_derive = { version = "0.18.0", default-features = false }
bevy_platform = { version = "0.18.0", default-features = false }
bevy_tasks = { version = "0.18.0", default-features = false }
bevy_gizmos = { version = "0.18.0", default-features = false }

# Workspace crates
rerecast = { version = "0.2.0", path = "crates/rerecast", default-features = false }
bevy_rerecast = { version = "0.3.0", path = "crates/bevy_rerecast", default-features = false }
bevy_rerecast_core = { version = "0.3.0", path = "crates/bevy_rerecast_core", default-features = false }
bevy_rerecast_editor_integration = { version = "0.3.0", path = "crates/bevy_rerecast_editor_integration", default-features = false }
avian_rerecast = { version = "0.3.0", path = "crates/avian_rerecast", default-features = false }
test_utils = { version = "0.1.0", path = "crates/test_utils", default-features = false }

# Other stuffs
bitflags = { version = "2.9.1", default-features = false }
bevy_ui_text_input = { version = "0.6.0-rc" }
flate2 = { version = "1.1.2", default-features = false, features = [
    "rust_backend",
] }
bincode = { version = "2", features = ["serde"], default-features = false }
bevy_trenchbroom = { version = "0.10", features = [
    "avian",
], git = "https://github.com/Noxmore/bevy_trenchbroom", branch = "bevy-0.17" }
approxim = "0.6"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"
# no_std support
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
