[package]
name = "rerecast_examples"
description = "Examples for rerecast"
publish = false
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy_rerecast = { workspace = true, default-features = true }
avian_rerecast = { workspace = true }
bevy = { workspace = true, features = ["bevy_remote"] }
bevy_trenchbroom = { workspace = true }
avian3d = { workspace = true }

[lints]
workspace = true
