[package]
name = "avian_rerecast"
description = "Avian backend for bevy_rerecast"
version = "0.3.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }
bevy_math = { workspace = true }
avian3d = { workspace = true, features = ["3d"] }
bevy_rerecast_core = { workspace = true, features = ["std"] }

[features]
default = ["f32"]
# Just here so that the default features compile lol
f32 = ["avian3d/f32", "avian3d/parry-f32"]
# No f64 because it's really the user's job to enable it and because we want to keep --all-features working

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
