[package]
name = "bevy_rerecast_editor_integration"
description = "Editor integration for bevy_rerecast_core"
version = "0.3.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[features]
default = ["debug_plugin"]

libm = ["bevy_math/libm", "bevy_rerecast_core/libm"]
debug_plugin = ["bevy_rerecast_core/debug_plugin"]
pbr_transmission_textures = ["bevy_pbr/pbr_transmission_textures"]
pbr_specular_textures = ["bevy_pbr/pbr_specular_textures"]
pbr_multi_layer_material_textures = [
    "bevy_pbr/pbr_multi_layer_material_textures",
]
pbr_anisotropy_texture = ["bevy_pbr/pbr_anisotropy_texture"]


[dependencies]
bevy_render = { workspace = true }
bevy_pbr = { workspace = true }
bevy_asset = { workspace = true }
bevy_app = { workspace = true }
bevy_transform = { workspace = true, features = ["serialize"] }
bevy_remote = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
bevy_derive = { workspace = true }
bevy_math = { workspace = true }
bevy_color = { workspace = true }
bevy_platform = { workspace = true }
bevy_camera = { workspace = true }
bevy_tasks = { workspace = true }
bevy_mesh = { workspace = true, features = ["serialize"] }
bevy_image = { workspace = true, features = ["serialize"] }

tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }

rerecast = { workspace = true, features = ["serialize", "std"] }
bevy_rerecast_core = { workspace = true, features = ["std"] }

# Editor integration
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true, features = ["std"] }
wgpu-types = { workspace = true, features = ["serde"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
