[package]
name = "test_utils"
description = "Internal test utilities"
publish = false
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
glam = { workspace = true }
rerecast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
approxim = { workspace = true }

[lints]
workspace = true
